--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "main": "index.js",
   "repository": "git@github.com:CSplan/argon2-wasm-benchmarks.git",
-  "author": "very-amused <very-amused@pm.me>",
+  "author": "very-amused <very-amused@pm.me>, CSplan LLC",
   "license": "MIT",
   "private": true,
   "scripts": {
@@ -21,5 +21,8 @@
     "eslint-plugin-unicorn": "^42.0.0",
     "ts-node": "^10.8.1",
     "typescript": "^4.7.3"
+  },
+  "dependencies": {
+    "@very-amused/argon2-wasm": "^0.2.1"
   }
 }
